--- a/public/views/error.ejs
+++ b/public/views/error.ejs
@@ -11,16 +11,17 @@
 <body>
     <main id="main-page">
         <div class="container-image">
-            <img src="../img/astronaute.png" alt="Astronauta 404" />
+            <img src="../img/sm-dog-homework.jpg" alt="Ups el perro se comió la tarea" />
         </div>
         <div class="container-main-text">
-            <h1>This Page is Lost in Space</h1>
-            <p>Contact to the administrator.</p>
+            <h1>&#128540; ¡El perro se comió la tarea! &#128517;</h1>
+            <br/>
+            <p>Si llegaste a este link por error te invitamos a que regreses al home de Puppis, haciendo click <a href="https://www.puppis.com.co">aquí</a></p>
         </div>
+        <br />
         <div class="details-message">
             <h3><%= message %></h3>
             <h4><%= error.status %></h4>
-            <pre><%= error.stack %></pre>
         </div>
     </main>
 </body>
