--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,13 +4,13 @@ body{
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 main#main-page{
-    height: 100%;
+    height: 100vw;
     width: 100vw;
-    background-color: #7dcfe4;
+    background-color: #fed120;
     padding: 10px;
 }
 
@@ -20,7 +20,7 @@ main#main-page{
 }
 
 .container-image img{
-    width: 600px;
+    width: 300px;
     height: auto;
     margin: auto;
     display: block;
@@ -67,7 +67,7 @@ main#main-page{
     display: grid;
     padding: 20px;
     border-radius: 10px;
-    background-color: #92d6e7;
+    background-color: #fed120;
     width: auto;
     height: auto;
 }
