--- a/public/views/load_pdf.ejs
+++ b/public/views/load_pdf.ejs
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-  
-  <title>Node File Uploads</title>
+  <title>Cargar PDF</title>
 </head>
 <body>
   <div class="container">
@@ -33,10 +32,9 @@
             <th></th>
         </tr>
       </thead>
-
       <tbody>
         <tr>
-          <td><%= typeof filename != 'undefined' ? filename: '' %></td>
+          <td><p id="download-pdf-by-id" data-path="<%= typeof filename != 'undefined' ? filename: '' %>"></p></td>
           <td><a href="/api/download?pdf=<%= typeof filename != 'undefined' ? filename: '' %>" class="waves-effect waves-light btn">Descargar</a></td>
         </tr> 
       </tbody>
@@ -47,6 +45,11 @@
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <script>
+      let id = $("#download-pdf-by-id");
+      let file = id.attr("data-path") || "";
+      id.text( window.location.origin + "/api/download?pdf=" + file );
+  </script>
 </body>
 </html>
