[CA] Debug - api in server

--- a/public/views/error.ejs
+++ b/public/views/error.ejs
@@ -25,7 +25,7 @@
     </main>
     <script type="text/javascript">
         setTimeout(() => {
-            window.location.href = "https://www.puppis.com.co"
+            //window.location.href = "https://www.puppis.com.co"
         }, 20000);
     </script>
 </body>
