[CA] Updating workflow with comerssia db

--- a/public/views/error.ejs
+++ b/public/views/error.ejs
@@ -16,9 +16,10 @@
         <div class="container-main-text">
             <h1>&#128540; ¡Ups! &#128517;</h1>
             <br />
+            <div class="container-error">
+                <p><%= error %></p>
+            </div>
             <p>Si llegaste a este link por error te invitamos a que regreses al home de <b>Puppis</b>, haciendo click <a href="https://www.puppis.com.co">aquí</a></p>
-            <br />
-            <p><small>Te redigiremos en algunos segundos...</small></p>
         </div>
         <br />
         <br />
