[CA] Updating link in <a> home

--- a/public/views/index-subscriptions.ejs
+++ b/public/views/index-subscriptions.ejs
@@ -15,7 +15,7 @@
         <div class="nav navbar-fixed">
             <nav>
               <div class="nav-wrapper">
-                <a href="/subscriptions" class="brand-logo">
+                <a href="/suscripciones" class="brand-logo">
                     <img src="../img/logo-puppis-icon-blue.jpg" alt="Puppis Colombia" width="64" height="64"/>
                 </a>
               </div>
