--- a/public/views/redirect-subscriptions.ejs
+++ b/public/views/redirect-subscriptions.ejs
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subscriptions!</title>
+    <title>Suscripciones | Puppis Colombia</title>
+    <meta name="robots" content="noindex, nofollow" />
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
