[CA] Updates in the subscription documentation

--- a/public/views/index-subscriptions.ejs
+++ b/public/views/index-subscriptions.ejs
@@ -45,9 +45,9 @@
                                 <span>Ingresa el codigo asignado</span>
                             </label>
                         </div>
-                        <div class="btn-search">
+                        <div class="btn-login">
                             <button class="waves-effect waves-light btn login-with-email yellow darken-2">
-                                Enviar
+                                Iniciar sesión
                                 <i class="material-icons right">send</i>
                             </button>
                         </div>
